src/objects/QuestionAnswer__c.object
<CustomObject>
    <fields>
        <fullName>Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent</label>
        <referenceTo>Agent__c</referenceTo>
        <relationshipName>QuestionAnswers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alignment__c</fullName>
        <label>Alignment</label>
        <picklist>
            <picklistValues>
                <fullName>Horizontal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vertical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AnswerType__c</fullName>
        <inlineHelpText>Please add comma separated values in AnswerOptions, if you are selecting Picklist and  Picklist (Multi-Select).</inlineHelpText>
        <label>Answer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Boolean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist (Multi-Select)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TextArea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Arm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Arm</label>
        <referenceTo>Arm__c</referenceTo>
        <relationshipName>QuestionAnswers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeletedDateTime__c</fullName>
        <label>DeletedDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this is for soft delete.</description>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Question_Answer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Question Answer</label>
        <referenceTo>QuestionAnswer__c</referenceTo>
        <relationshipName>QuestionAnswers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PickList_Values__c</fullName>
        <inlineHelpText>Please enter comma separated pick list values. Ex : 123,abc,xyz</inlineHelpText>
        <label>Pick List Values</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Flexible Question Scheme</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Question__c</columns>
        <columns>AnswerType__c</columns>
        <columns>Agent__c</columns>
        <columns>Parent_Question_Answer__c</columns>
        <columns>Arm__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Que-{000000}</displayFormat>
        <label>Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flexible Question Scheme</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>